--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,25 @@
-
+.container {
 display: flex;
 flex-direction: row;
-front-size: 50px;
-border : 3px solid black;
-/* gap: 30px; */
+flex-wrap: wrap;
+justify-content: space-between;
+align-items: center;
 }
-.eg1{
+.item1{
 	width: 200px;
 	height: 100px;
 	background-color: bura;
+	margin: 10px;
 }
-.eg2{
+.item2{
 	width: 200px;
 	height: 200px;
 	background-color: red;
+	margin: 10px
 }
-.eg3{
+.item3{
 	width: 200px;
 	height: 200px;
 	background-color: blue
+	margin: 10px;
 }
